# target-daemon

./: .clang-format  .gitmodules  LICENSE  README.md
daemon/: CMakeLists.txt  README.md
daemon/docs/: protocol.md
daemon/src/: main.cpp  utility.cpp  utility.h
restserver/: server.rb
